# nelly

./: .gitignore  Cargo.toml  analysis_options.yaml  build.rs  flake.nix  flutter_rust_bridge.yaml  flutter_rust_bridge_codegen.nix  pubspec.yaml
.cargo/: config.toml
dart_tracing/: Cargo.toml  pubspec.yaml
dart_tracing/lib/: tracing.dart  zone.dart
dart_tracing/lib/src/: ffi.dart  ffi.rs  lib.dart  lib.rs
ffigen/: build.rs  template.dart  template.rs
runner/: Cargo.toml  build.rs
runner/src/: gen.dart  main.rs
src/: atomic_f64.rs  config.rs  embedder.rs  entrypoint.dart  ffi.dart  ffi.macro.dart  ffi.resolver.rs  ffi.rs  ffi.type.dart  gen.dart  handlers.rs  lib.dart  lib.rs  main.dart  main.rs  nelly.dart  nelly.rs  pool.rs  tracing.dart
src/platform_message/: binary.dart  binary.rs  mod.dart  mod.rs  shutdown.dart  shutdown.rs  wlr_layer.dart  wlr_layer.rs  xdg_toplevel.dart  xdg_toplevel.rs
src/seat/: keyboard.rs  mod.rs  pointer.rs  touch.rs  util.rs
src/seat/pointer/: pointer_gestures.rs  relative_pointer.rs
src/shell/: compositor.rs  mod.rs
src/shell/bad/: layer.rs  lock.rs  mod.rs  popup.rs  toplevel.rs  unmapped.rs
src/shell/layer/: dispatch.rs  mod.rs
src/shell/xdg/: mod.rs  popup.rs  window.rs
src/wl_flutter/: surface_lifecycle.dart  wlr_layer.dart  xdg_toplevel.dart
test/: widget_test.dart
