[workspace]
members = ["generated", "dart_tracing", "runner"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
nelly.path = "."
dart_tracing.path = "dart_tracing"
volito = { path = "../volito" }
volito-build-support = { path = "../volito/build-support" }
anyhow = "1.0.93"
cargo = "0.84.0"
log = "0.4.22"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "tracing-log",
] }
tracing = "0.1.40"

[package]
name = "nelly"
version.workspace = true
edition = "2021"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
volito.workspace = true
anyhow.workspace = true
dart_tracing.workspace = true
# dart-sys = "4.1.5"
elf = "0.7.4"
input-linux = "0.7.1"
libloading = "0.8.6"
memmap2 = "0.9.5"
rustix = "0.38.41"
thiserror = "2.0.3"
binary-stream = "9.1.0"
num = "0.4.3"
bitflags = "2.6.0"

[dependencies.smithay-client-toolkit]
version = "0.19.2"
default-features = false
features = ["calloop"]
