[workspace]
members = ["generated", "runner"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]

volito.git = "https://github.com/sodiboo/volito.git"
volito-build-support.git = "https://github.com/sodiboo/volito.git"

halcyon_embedder.path = "../halcyon"

anyhow = "1.0.93"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "tracing-log",
] }
tracing = "0.1.40"

[package]
name = "nelly"
version.workspace = true
edition = "2021"

[lib]
path = "src/nelly.rs"

[dependencies]
volito.workspace = true
halcyon_embedder.workspace = true

anyhow.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

elf = "0.7.4"
input-linux = "0.7.1"
libloading = "0.8.6"
memmap2 = "0.9.5"
rustix = "0.38.41"
thiserror = "2.0.3"
num = "0.4.3"
bitflags = "2.6.0"

[dependencies.smithay-client-toolkit]
version = "0.19.2"
default-features = false
features = ["calloop"]
